--- a/core-concepts/ai-chat-assistant.mdx
+++ b/core-concepts/ai-chat-assistant.mdx
@@ -59,6 +59,10 @@ It can fetch information about your [GitHub pull requests](/configuration/github
 
 The assistant can search QA.tech's documentation to answer questions about platform features and capabilities, and provide you with contact information for customer support when you need help beyond what the AI can provide.
 
+**Safe Experimentation**
+
+Tests generated in chat aren't committed until you explicitly click "Add Selected Tests" - you can review, edit, or reject them without affecting your project. Files uploaded in chat are isolated to that conversation only, so you can experiment freely without impacting teammates. See [How Knowledge Works](/core-concepts/knowledge#how-knowledge-works) for details on chat isolation and when to move knowledge to your project.
+
 ## Agentic AI Workflows Behind the Scenes
 
 The Chat Assistant uses multiple specialized AI agents that automatically coordinate to handle your requests. You don't manage these agents—they work together seamlessly based on what you ask for.
