--- a/core-concepts/test-plans.mdx
+++ b/core-concepts/test-plans.mdx
@@ -113,3 +113,7 @@ This means that while a single test case may take several minutes to execute, ru
 3. **Schedule and Workflow Optimization**:
    - Schedule less frequent tests during off-peak hours
    - Configure GitHub workflows to run tests at key points in your development process (deployments, PRs, merges)
+
+4. **Managing Different Versions and Releases**:
+   - Use Test Scenarios to define the specific test cases to run for a given version or release
+   - The same Test Plan can be reused across different environments by updating its parameters (applications and environments)
