--- a/test-features/device-presets.mdx
+++ b/test-features/device-presets.mdx
@@ -196,3 +196,4 @@ If you encounter issues with device presets:
 - Default configurations are optimized for common testing scenarios
 - Custom headers are preserved across test runs
 - Locale and timezone settings affect date/time handling in tests
+- Device preset information is stored in test results and can be used for analysis
